# DTU-02242-PA-PROJ

./: .gitignore  .gitmodules  .pdm-python  README.md  prepare_data.sh  pyproject.toml  run.sh
java-example/: pom.xml
java-example/src/main/java/org/example/: App.java  Funs.java  Math.java
java-example/src/test/java/org/example/: AppTest.java  FunsTest.java  MathTest.java
scripts/: analyse.py  evaluate.py  evaluate_funs.py  interpret.py  prepare.py  rotate.py
src/evaluation/: __init__.py  evaluate.py  evaluator.py  results.py  test_scenario.py  test_scenario_builder.py
src/interpreter/arithmetic/: interval_arithmetic.py  sign_arithmetic.py
src/interpreter/static/: interpreter.py
src/interpreter/static/abstractions/: itval.py  sign_set.py
src/prediction/: __init__.py  abstract_interval_predictor.py  abstract_predictor.py  abstract_sign_predictor.py  call_graph_predictor.py  itabstract_predictor.py  predictor.py
src/preparation/: prepare.py
src/reader/: __init__.py  file.py  method.py  method_signature.py  program.py
src/static_analysis/: arithmetic.py  interpreter.py  method_id.py  program.py  state.py
src/static_analysis/interpreter/: __init__.py  abstract_interpreter.py  abstract_interval_interpreter.py  abstract_sign_interpreter.py  common.py  it_abstract_interpreter.py
src/static_analysis/interpreter/abstractions/: __init__.py  abstract_state.py  bool_set.py  bot.py  interval.py  itval.py  ref_set.py  sign_set.py
src/static_analysis/interpreter/arithmetic/: __init__.py  arithmetic.py  bool_arithmetic.py  interval_arithmetic.py  sign_arithmetic.py
src/syntactic_analysis/: scanner.py
src/syntactic_analysis/bytecode/: call_graph.py
tests/: itvals_arithmetic_test.py  itvals_test.py  sign_set_arithmetic_test.py  sign_set_test.py
tests/scenario/: change_test.py
