[project]
name = "DTU-02242-PA-PROJ"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Andersen", email = "michael@otey.dk"},
]
dependencies = [
    "hypothesis>=6.115.5",
    "jmespath>=1.0.1",
    "networkx>=3.4.2",
    "matplotlib>=3.9.2",
    "tree-sitter>=0.23.2",
    "tree-sitter-java>=0.23.2",
    "jsondiff>=2.2.1",
    "tqdm>=4.67.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
rotate = {call = "scripts.rotate:main"}
analyse = {call = "scripts.analyse:main"}
interpret = {call = "scripts.interpret:main"}
evaluate = {call = "scripts.evaluate:main"}

[tool.pytest.ini_options]
pythonpath = [
    "./src"
]

[dependency-groups]
dev = ["pytest>=8.3.3"]
